Add enum which shows GraphQL init failing

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ elide:
     enabled: true
   graphql:
     path: /graphql/api/v1
-    enabled: true
+    enabled: false
   swagger:
     path: /doc
     enabled: true
